--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 h1 {
   color: #3F72AF;
   font-family: 'Roboto', sans-serif;
+  font-weight: bold;
 }
 
 h2 {
@@ -35,46 +36,46 @@ a:hover {
   color: #112D4E;
 }
 
-.container {
-  margin: 0 auto;
-  padding: 0;
-}
-
 .card {
   background-color: #DBE2EF;
-  padding: 50px;
-  box-shadow: 0px 0px 1em rgb(0 0 0 / 10%);
+  padding: 40px;
+  box-shadow: 10px 10px 8px #888888;
   border-radius: 10px;
   text-align: center;
   margin: 20px auto;
   width: 500px;
 }
 
-#list-inline {
+.list-inline {
   list-style: none;
   padding-left: 0px;
 }
 
-#list-inline > li {
+.list-inline > li {
   display: inline-block;
   padding: 0px 20px;
 }
 
 .image-circle {
   border-radius: 50%;
-  width: 100px;
+  width: 200px;
 }
 
-.btn-yellow {
+.btn-blue {
   background-color: #3F72AF;
   color: #DBE2EF;
   padding: 10px 20px;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
 .social-icon {
   color:rgb(0 0 0 / 10%);
-  font-size: 30px;
+  font-size: 40px;
+}
+
+.container {
+  width: 600px;
+  margin: auto;
 }
 
 @media (max-width: 960px) {
@@ -83,14 +84,12 @@ a:hover {
     width: 700px;
   }
 }
-
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   .container {
     width: 500px;
   }
 }
-
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
