--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ h2 {
   font-weight: bold;
 }
 
+div {
+  display: block;
+}
+
 p {
   display: block;
   margin-block-start: 1em;
@@ -49,6 +53,7 @@ a:hover {
 .list-inline {
   list-style: none;
   padding-left: 0px;
+  text-align: center;
 }
 
 .list-inline > li {
